fixed featured item bug; items without descriptions are no longer clipped

--- a/css/screen.css
+++ b/css/screen.css
@@ -514,10 +514,10 @@ div.secondary-nav.exhibit {
 .item-meta {
 	width: 740px;
 	float: left;
-	padding: 20px 20px 0 ;
+	padding: 20px;
 	}
 	
-	 .item-meta h2:last-child {margin-bottom:20px;}
+	 .item-meta p:last-child {margin-bottom:0;}
 
 #item-title {
 	clear: both;
